# rdfpipe-rs

./: .editorconfig  .envrc  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  justfile  rust-toolchain.toml  rustfmt.toml
nix/: flake.nix
scripts/: run_bench.sh  viz_bench.R
src/: cli.rs  converter.rs  formats.rs  input.rs  io.rs  main.rs  parser.rs  serializer.rs  utils.rs
