[package]
name = "rdfpipe-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
rio_turtle = "0.8.4"
sophia = { version = "0.8.0-alpha.3", features = ["xml"] }
sophia_rio = "0.8.0-alpha.3"
